test/syntax/invalid/for-of-initializer.ts
// expect: VZG2001
for (const value = initial of iterable) {}
